# RobotechTest

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/: tcp_client.h
Client/src/: main.cpp  tcp_client.cpp
Server/: CMakeLists.txt
Server/include/: modbus_session.h  server.h  shared_data.h  tcp_session.h
Server/src/: main.cpp  modbus_session.cpp  server.cpp  tcp_session.cpp
